added personal picture and improved projects section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!-- Header / Intro -->
     <header>
-        <img src="yourphoto.jpg" alt="Profile Picture" class="profile" />
+        <img src="assets\DSC_0443.jpg" alt="Profile Picture" class="profile" />
 
         <h1>Malek Kchaou</h1>
         <p>
@@ -103,31 +103,82 @@
             <p>
                 I'm a Computer Science student originally from the Mediterranean, now studying at the University of Kansas.
                 My interests lie at the intersection of <strong>machine learning, optimization, biomedical imaging, and human–AI interaction</strong>.
-                A knee injury years ago sparked my curiosity in biomechanics — and since then I’ve been combining ML + modeling to build tools that help us better understand human movement and improve rehabilitation.
+                A knee injury sparked my fascination with biomechanics and rehabilitation, motivating my work on AI-enhanced clinical tools, optimization-aware ML frameworks, and computational modeling of biological structures.
             </p>
         </section>
 
         <!-- Recent Featured Projects -->
         <section class="section">
-            <h2>Featured Projects (Recent)</h2>
+            <h2>Recent Featured Projects</h2>
 
             <div class="projects-grid">
 
                 <div class="project-card">
-                    <h3><a href="https://github.com/youruser/OptimizerArena">OptimizerArena</a></h3>
-                    <p>Interactive platform for visualizing loss landscapes and optimization trajectories using React + Plotly.</p>
+                    <h3><a href="https://github.com/MK720-dev/CardioSegNet">CardioSegNet</a></h3>
+                    <p>
+                        Deep-learning pipeline for cardiac MRI segmentation using a U-Net architecture.
+                        Includes preprocessing, training, evaluation metrics, and visualization tools.
+                    </p>
                 </div>
 
                 <div class="project-card">
-                    <h3><a href="https://github.com/youruser/CardioSegNet">CardioSegNet</a></h3>
-                    <p>U-Net based semantic segmentation for cardiac MRIs with a full training and evaluation pipeline.</p>
+                    <h3><a href="https://github.com/MK720-dev/OptimizerArena">OptimizerArena</a></h3>
+                    <p>
+                        Interactive platform for visualizing loss landscapes and optimization trajectories.
+                        Built with React + Plotly for 3D visualization and training-path analysis.
+                    </p>
                 </div>
 
                 <div class="project-card">
-                    <h3><a href="https://github.com/youruser/ThAirpy">ThAIrpy</a></h3>
-                    <p>AI-enhanced AR system for physical therapy guidance and real-time motion feedback.</p>
+                    <h3><a href="https://github.com/MK720-dev/The-ML-Lab">The ML Lab</a></h3>
+                    <p>
+                        A collection of machine learning experiments, implementations, and exploratory
+                        projects covering optimization, neural networks, data analysis, and model evaluation.
+                    </p>
                 </div>
 
+            </div>
+        </section>
+
+        <!-- Collaborative Projects -->
+        <section class="section">
+            <h2>Collaborative Projects</h2>
+
+            <div class="projects-grid">
+
+                <div class="project-card">
+                    <h3><a href="https://github.com/MK720-dev/ThAIrpy-">ThAIrpy</a></h3>
+                    <p>
+                        AI-enhanced augmented-reality physical therapy assistant.
+                        Designed to guide patients through exercises, provide real-time feedback,
+                        and support therapist workflows. Collaboration with exercise science researchers.
+                    </p>
+                </div>
+
+                <div class="project-card">
+                    <h3><a href="https://github.com/wesmcdougal/EECS-581-Minesweeper-Project-2025">Minesweeper (EECS 581)</a></h3>
+                    <p>
+                        Team-designed Minesweeper game for KU’s capstone software engineering course.
+                        Focus on large-scale architecture, system design, and collaborative development workflows.
+                    </p>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- Active Collaboration (Capstone) -->
+        <section class="section">
+            <h2>Current Project (Capstone)</h2>
+
+            <div class="projects-grid">
+                <div class="project-card">
+                    <h3><a href="https://github.com/Abdulaziz-Ali123/LocalNotes">LocalNotes</a></h3>
+                    <p>
+                        A secure local Markdown-based note-taking application with file-system integration.
+                        Supports folder browsing, file editing, creation, and deletion — designed as a
+                        polished desktop productivity tool for KU’s senior design course.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -138,18 +189,35 @@
             <div class="projects-grid">
 
                 <div class="project-card">
-                    <h3><a href="#">MRI Knee FEM Simulation</a></h3>
-                    <p>Finite Element Model of human knee joint to simulate meniscal tear biomechanics.</p>
+                    <h3>
+                        <a href="https://github.com/MK720-dev/Social_Security_Number_Generator">
+                            Social Security Number Generator
+                        </a>
+                    </h3>
+                    <p>
+                        Generates valid French social security numbers using official datasets.
+                        Includes database creation for synthetic demographic profiles.
+                    </p>
                 </div>
 
                 <div class="project-card">
-                    <h3><a href="https://github.com/youruser/Google-Stock-Prediction">Stock Prediction Model</a></h3>
-                    <p>Linear regression model predicting Google stock prices with custom ML pipeline.</p>
+                    <h3>
+                        <a href="https://github.com/MK720-dev/Python_Stock_Prices_Prediction">
+                            Stock Price Prediction
+                        </a>
+                    </h3>
+                    <p>
+                        Regression-based model for predicting Google stock prices.
+                        Includes dataset preprocessing, custom regression code, and evaluation metrics.
+                    </p>
                 </div>
 
                 <div class="project-card">
-                    <h3><a href="#">Obstacle-Avoiding Robot</a></h3>
-                    <p>Four-wheeled autonomous robot with ultrasonic sensing and simple navigation logic.</p>
+                    <h3><a href="https://github.com/MK720-dev/CalcRPN">CalcRPN</a></h3>
+                    <p>
+                        Reverse Polish Notation calculator using C and Qt Creator for the GUI.
+                        Implements expression parsing, operator handling, and stack-based evaluation.
+                    </p>
                 </div>
 
             </div>
@@ -162,10 +230,10 @@
                 My current and future research focuses on:
             </p>
             <ul>
-                <li>Developing optimization-aware tools for deeper insight into neural network training</li>
-                <li>Building AI/AR-based systems that improve physical therapy outcomes through real-time feedback</li>
-                <li>Modeling human joints and tissues using FEM integrated with ML-driven predictions</li>
-                <li>Machine learning for biomedical image analysis (MRI, segmentation, classification)</li>
+                <li>Optimization-aware tools for understanding neural network training dynamics</li>
+                <li>AI and AR systems that enhance physical therapy through motion analysis and feedback</li>
+                <li>Finite element modeling of biological tissues, particularly the human knee joint</li>
+                <li>Machine learning and deep learning for biomedical imaging, segmentation, and diagnostics</li>
             </ul>
         </section>
 
@@ -175,7 +243,7 @@
             <p>
                 📧 <a href="mailto:your.email@example.com">your.email@example.com</a><br />
                 🔗 <a href="https://www.linkedin.com/in/yourprofile">LinkedIn</a><br />
-                💻 <a href="https://github.com/yourgithub">GitHub</a>
+                💻 <a href="https://github.com/MK720-dev">GitHub</a>
             </p>
         </section>
 
