Improved personal section

--- a/index.html
+++ b/index.html
@@ -91,21 +91,68 @@
 
         <h1>Malek Kchaou</h1>
         <p>
-            Computer Science @ University of Kansas • Machine Learning • Optimization • Biomedical Modeling • AR/AI Physical Therapy
+            Computer Science Senior @ University of Kansas • Machine Learning • Optimization • Biomedical Modeling 
         </p>
     </header>
 
     <div class="container">
 
         <!-- Personal Background -->
+        <!-- Personal Section -->
         <section class="section">
             <h2>About Me</h2>
-            <p>
-                I'm a Computer Science student originally from the Mediterranean, now studying at the University of Kansas.
-                My interests lie at the intersection of <strong>machine learning, optimization, biomedical imaging, and human–AI interaction</strong>.
-                A knee injury sparked my fascination with biomechanics and rehabilitation, motivating my work on AI-enhanced clinical tools, optimization-aware ML frameworks, and computational modeling of biological structures.
-            </p>
+
+            <!-- Block 1: Paragraph (left) + Image (right) -->
+            <div class="about-block">
+                <div class="about-text">
+                    <h3>Where I'm From</h3>
+                    <p>
+                        I was born and raised in the Mediterranean, in Tunisia — a place shaped by
+                        ancient civilizations, layered history, and a strong cultural memory. Growing
+                        up between the ruins of Carthage and the modern city taught me to appreciate
+                        both tradition and innovation. This mix of heritage and curiosity has deeply
+                        influenced the way I approach science, technology, and research.
+                    </p>
+                </div>
+                <img src="mediterranean.jpg" alt="Mediterranean Heritage" class="about-img">
+            </div>
+
+            <!-- Block 2: Image (left) + Paragraph (right) -->
+            <div class="about-block reverse">
+                <img src="judo.jpg" alt="Judo and Sports" class="about-img">
+                <div class="about-text">
+                    <h3>Sports & Personal Interests</h3>
+                    <p>
+                        Athletics have always played a central role in my life, especially <strong>judo</strong>.
+                        Training taught me discipline, resilience, and the importance of technical precision —
+                        qualities that translate directly into my work in machine learning and computational
+                        modeling. I’m also deeply interested in <strong>ancient history</strong>, particularly
+                        Carthage and its scientific, military, and cultural legacy. This duality between
+                        physical discipline and historical curiosity shapes both how I learn and what I build.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Block 3: Paragraph (left) + Image (right) -->
+            <div class="about-block">
+                <div class="about-text">
+                    <h3>Research Interests & Aspirations</h3>
+                    <p>
+                        My research sits at the intersection of <strong>
+                            machine learning, optimization,
+                            biomedical imaging, and computational modeling
+                        </strong>. I aim to build systems
+                        that combine data-driven intelligence with a physical understanding of the human body.
+                        Long-term, I aspire to pursue a PhD and contribute to the development of AI-assisted
+                        healthcare tools, optimization-aware neural architectures, and computational models
+                        that reveal the mechanical truths behind biological structures and movement.
+                    </p>
+                </div>
+                <img src="research.jpg" alt="Research and Aspirations" class="about-img">
+            </div>
+
         </section>
+
 
         <!-- Recent Featured Projects -->
         <section class="section">
