Improved personal section

--- a/index.html
+++ b/index.html
@@ -107,11 +107,15 @@
                 <div class="about-text">
                     <h3>Where I'm From</h3>
                     <p>
-                        I was born and raised in the Mediterranean, in Tunisia — a place shaped by
-                        ancient civilizations, layered history, and a strong cultural memory. Growing
-                        up between the ruins of Carthage and the modern city taught me to appreciate
-                        both tradition and innovation. This mix of heritage and curiosity has deeply
-                        influenced the way I approach science, technology, and research.
+                        I was born and raised in the Mediterranean, in Tunisia—a country shaped by ancient
+                        civilizations, scientific heritage, and a deep cultural respect for learning. Academics
+                        were always central in my life. After ranking among the top students nationally in both
+                        the elementary and middle school national exams, I earned admission into two of the most
+                        selective public institutions in the country: the <strong>Collège Pilote les Berges du Lac 2</strong>
+                        for middle school and the <strong>Pioneer School of Ariana (LPA)</strong> for high school,
+                        where I completed the mathematics section. These formative years instilled in me discipline,
+                        curiosity, and a strong foundation in analytical thinking—values that continue to guide my
+                        work in machine learning and research today.
                     </p>
                 </div>
                 <img src="mediterranean.jpg" alt="Mediterranean Heritage" class="about-img">
@@ -138,14 +142,14 @@
                 <div class="about-text">
                     <h3>Research Interests & Aspirations</h3>
                     <p>
-                        My research sits at the intersection of <strong>
-                            machine learning, optimization,
-                            biomedical imaging, and computational modeling
-                        </strong>. I aim to build systems
-                        that combine data-driven intelligence with a physical understanding of the human body.
-                        Long-term, I aspire to pursue a PhD and contribute to the development of AI-assisted
-                        healthcare tools, optimization-aware neural architectures, and computational models
-                        that reveal the mechanical truths behind biological structures and movement.
+                        My research interests lie in <strong>robust machine learning</strong> and
+                        <strong>optimization</strong>, with a focus on understanding how learning systems behave
+                        in real-world, high-stakes settings. I am particularly interested in bridging the
+                        persistent gap between <strong>ML theory</strong>—optimization dynamics, stability, generalization—
+                        and the <strong>practical deployment</strong> of models in domains where reliability matters,
+                        such as healthcare, rehabilitation, and scientific computing. Long-term, I aim to pursue
+                        a PhD and work toward developing learning systems that are not only accurate, but
+                        <strong>stable, interpretable, and robust under real-world conditions</strong>.
                     </p>
                 </div>
                 <img src="research.jpg" alt="Research and Aspirations" class="about-img">
