Added research mentors section

--- a/index.html
+++ b/index.html
@@ -231,6 +231,19 @@
                     </p>
                 </div>
             </div>
+
+            <div class="projects-grid">
+                <div class="project-card">
+                    <h3><a href="https://github.com/MK720-dev/CardioSegNet">CardioSegNet — Phase 2</a></h3>
+                    <p>
+                        Ongoing extension of my CardioSegNet project as the final project for
+                        <strong>MATH 796: Optimization and Machine Learning</strong>. Phase 2 focuses on
+                        exploring advanced optimization methods, improved U-Net architectures,
+                        training stability, and evaluation under challenging conditions to better
+                        understand robustness in biomedical segmentation.
+                    </p>
+                </div>
+            </div>
         </section>
 
         <!-- Older Projects -->
@@ -287,6 +300,40 @@
                 <li>Machine learning and deep learning for biomedical imaging, segmentation, and diagnostics</li>
             </ul>
         </section>
+
+        <!-- Research Mentors Section -->
+        <section class="section">
+            <h2>Research Mentors</h2>
+
+            <div class="projects-grid">
+
+                <div class="project-card">
+                    <h3>Dr. Suzanne M. Shontz</h3>
+                    <p>
+                        Professor in Computer Science at the University of Kansas.
+                        Research areas include computational science, scientific computing,
+                        numerical optimization, mesh generation, and biomedical modeling.
+                    </p>
+                    <p>
+                        🌐 <a href="https://ittc.ku.edu/~shontz/">Faculty Website</a>
+                    </p>
+                </div>
+
+                <div class="project-card">
+                    <h3>Prof. Erik Van Vleck</h3>
+                    <p>
+                        Professor of Mathematics at the University of Kansas.
+                        Specializes in numerical analysis, dynamical systems, matrix computations,
+                        optimization, and stability theory.
+                    </p>
+                    <p>
+                        🌐 <a href="https://people.ku.edu/~evanvleck">Faculty Website</a>
+                    </p>
+                </div>
+
+            </div>
+        </section>
+
 
         <!-- Contact -->
         <section class="section">
