--- a/index.html
+++ b/index.html
@@ -334,6 +334,48 @@
             </div>
         </section>
 
+        <!-- Achievements Section -->
+        <section class="section">
+            <h2>Achievements</h2>
+
+            <div class="projects-grid">
+
+                <div class="project-card">
+
+                <div class="project-card">
+                    <h3>UPE Honors Society</h3>
+                    <p>
+                        Member of <strong>Upsilon Pi Epsilon (UPE)</strong>, the international honor society for
+                        computing and information disciplines, recognizing academic excellence in computer science.
+                    </p>
+                </div>
+
+                <div class="project-card">
+                    <h3>Black Babcock Scholarship</h3>
+                    <p>
+                        Awarded the competitive <strong>Black Babcock Scholarship</strong> ($300) for academic
+                        excellence and strong performance in mathematics and applied computing.
+                    </p>
+                </div>
+
+                <div class="project-card">
+                    <h3>May Landis Mathematics Scholarship</h3>
+                    <p>
+                        Recipient of the <strong>May Landis Math Scholarship</strong>, recognizing high achievement
+                        and potential in advanced undergraduate mathematics.
+                    </p>
+                </div>
+
+                <div class="project-card">
+                    <h3>Dean’s Honor Roll</h3>
+                    <p>
+                        Recognized multiple times on the <strong>Dean’s Honor Roll</strong> for both the
+                        School of Engineering and the College of Liberal Arts & Sciences (CLAS),
+                        awarded for outstanding academic performance.
+                    </p>
+                </div>
+            </div>
+        </section>
 
         <!-- Contact -->
         <section class="section">
