Improved some sections

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 <div class="project-card">
                     <h3><a href="https://github.com/wesmcdougal/EECS-581-Minesweeper-Project-2025">Minesweeper (EECS 581)</a></h3>
                     <p>
-                        Team-designed Minesweeper game for KU’s capstone software engineering course.
+                        Team-designed Minesweeper game with AI playing mode for KU’s Software Engineering II Senior Design course (Initial Project).
                         Focus on large-scale architecture, system design, and collaborative development workflows.
                     </p>
                 </div>
@@ -219,15 +219,15 @@
 
         <!-- Active Collaboration (Capstone) -->
         <section class="section">
-            <h2>Current Project (Capstone)</h2>
+            <h2>Current Project</h2>
 
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3><a href="https://github.com/Abdulaziz-Ali123/LocalNotes">LocalNotes</a></h3>
+                    <h3><a href="https://github.com/Abdulaziz-Ali123/LocalNotes">LocalNotes (Capstone)</a></h3>
                     <p>
-                        A secure local Markdown-based note-taking application with file-system integration.
+                        A secure AI-enhanced local Markdown-based note-taking application with file-system integration.
                         Supports folder browsing, file editing, creation, and deletion — designed as a
-                        polished desktop productivity tool for KU’s senior design course.
+                        polished desktop productivity tool for KU’s Software Engineering Senior Design course (Final project).
                     </p>
                 </div>
             </div>
@@ -237,7 +237,7 @@
                     <h3><a href="https://github.com/MK720-dev/CardioSegNet">CardioSegNet — Phase 2</a></h3>
                     <p>
                         Ongoing extension of my CardioSegNet project as the final project for
-                        <strong>MATH 796: Optimization and Machine Learning</strong>. Phase 2 focuses on
+                        <strong>MATH 796: Machine Learning and Optimization</strong>. Phase 2 focuses on
                         exploring advanced optimization methods, improved U-Net architectures,
                         training stability, and evaluation under challenging conditions to better
                         understand robustness in biomedical segmentation.
@@ -315,7 +315,7 @@
                         numerical optimization, mesh generation, and biomedical modeling.
                     </p>
                     <p>
-                        🌐 <a href="https://ittc.ku.edu/~shontz/">Faculty Website</a>
+                        🌐 <a href="https://people.eecs.ku.edu/~s906s230/">Faculty Website</a>
                     </p>
                 </div>
 
@@ -327,7 +327,7 @@
                         optimization, and stability theory.
                     </p>
                     <p>
-                        🌐 <a href="https://people.ku.edu/~evanvleck">Faculty Website</a>
+                        🌐 <a href="https://mathematics.ku.edu/people/erik-van-vleck">Faculty Website</a>
                     </p>
                 </div>
 
@@ -381,8 +381,8 @@
         <section class="section">
             <h2>Contact</h2>
             <p>
-                📧 <a href="mailto:your.email@example.com">your.email@example.com</a><br />
-                🔗 <a href="https://www.linkedin.com/in/yourprofile">LinkedIn</a><br />
+                📧 <a href="mailto:malek.kchaou@ku.edu">malek.kchaou@ku.edu</a><br />
+                🔗 <a href="https://www.linkedin.com/in/malekkchaou/">LinkedIn</a><br />
                 💻 <a href="https://github.com/MK720-dev">GitHub</a>
             </p>
         </section>
